# python-otds

./: .mypy.ini  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
otds/: __init__.py  enums.py  main.py  typedefs.py
otds/schema/: otds-booking-toma.xsd  otds-schema-accommodation.xsd  otds-schema-products.xsd
schema/: otds-booking-merlin.xsd  otds-schema-addon.xsd  otds-schema-common.xsd  otds-schema-flight.xsd  otds.xsd
