[build-system]
requires = ["setuptools>=46"]
build-backend = "setuptools.build_meta"

[project]
name = "otds"
dependencies = ["lxml>=5,<6"]
description = "A typed parser for OTDS"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha"
]

[project.urls]
Homepage = "https://github.com/snowfall-travel/python-otds"
Issues = "https://github.com/snowfall-travel/python-otds/issues"

[tool.setuptools]
packages = ["otds"]

[tool.setuptools.dynamic]
version = {attr = "otds.__version__"}
